home+index page update

--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -19,9 +19,9 @@
  </head>
  <body>
    <div class="leader">
-     <p><a class="about" href="../about.html">联系/CONTACT</a></p>
-     <p><a class="center_page" href="../home.html">木牙✻MUYA</a></p>
-     <p><a class="flawer" href="../huayuji-html/index.html">花园/GARDEN</a></p>
+     <p><a class="about" href="../about.html">CONTACT</a></p>
+     <p><a class="center_page" href="../home.html">MUYA✻Index</a></p>
+     <p><a class="flawer" href="../huayuji-html/index.html">GARDEN</a></p>
    </div>
    <br><br>
    <div class="container">
