--- a/index.html
+++ b/index.html
@@ -19,19 +19,57 @@
  </head>
  <body>
    <div class="leader">
-   <p><a class="about" href="about.html">联系/CONTACT</a></p>
-   <p><a class="center_page" href="home.html">木牙✻MUYA</a></p>
-   <p><a class="flawer" href="huayuji-html/index.html">花园/GARDEN</a></p>
+   <p><a class="about" href="about.html">CONTACT</a></p>
+   <p><a class="center_page" href="home.html">MUYA✻Index</a></p>
+   <p><a class="flawer" href="huayuji-html/index.html">GARDEN</a></p>
    </div>
    <br>
-   <div>
-     <br>
-     <a href="home.html"><img class="homepage" src="flower logo complex.gif"></a>
-   </div>
-   <br>
+   <br><br><br>
+
+   <div class="text">
+   <img class="mySlides" src="slide01.jpg" style="width:100%">
+   <img class="mySlides" src="slide02.jpg" style="width:100%">
+   <img class="mySlides" src="slide03.jpg" style="width:100%">
+   <img class="mySlides" src="slide04.jpg" style="width:100%">
+</div>
+   <br><br>
    <p class="text">BE THE ONE</p>
    <p class="text">没什么, 比年轻, 更为独特</p>
    <p class="text">“Sensibility, Interview, Young, Unique & Original”</p>
+   <br><br><br><br>
+   <hr>
+   <p class="chinese">Here are a few quick links to our newest updated Artist and Designer interview article.</p>
+   <p class="chinese">///快来看看我们最近更新的采访文章吧～///</p><br>
+   <p class="chinese"><a href="braulio-html/index.html">➥ 现实与虚拟的视觉转化 | Braulio Amado 「艺术访谈」--- 2020.10.27</p></a>
+   <p class="chinese"><a href="splopdesign-html/index.html">➥ 线上珠宝展竟是盲盒❗️❓| Splop Design 「艺术访谈」--- 2020.10.19</p></a>
+   <p class="chinese"><a href="avaroth-html/index.html">➥ 跨界媒介的碰撞：蜂巢+刺绣 | Ava Roth 「艺术访谈」--- 2020.10.06</p></a>
+   <p class="chinese"><a href="synopticoffice-html/index.html">➥ 跨文化下的字体设计 | Synoptic Office 「艺术访谈」--- 2020.09.29</p></a>
+
+
+   <br><br><br><br><br><br><br><br><br><br><br><br>
+   <div>
+     <br>
+     <a href="home.html"><img class="homepage" src="logo-motion.gif"></a>
+   </div>
+
+
+<script>
+var myIndex = 0;
+carousel();
+
+function carousel() {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";
+  }
+  myIndex++;
+  if (myIndex > x.length) {myIndex = 1}
+  x[myIndex-1].style.display = "block";
+  setTimeout(carousel, 2000); // Change image every 2 seconds
+}
+</script>
+
 
 
 
