--- a/home.html
+++ b/home.html
@@ -175,6 +175,15 @@
         Bráulio Amado is a Graphic Designer and Illustrator from Portugal, currently living in New York City. He worked as a Designer at Pentagram NYC. Then joined Bloomberg Businessweek as an Art Director. Moved to Wieden+Kennedy. Then started his own studio in 2017. Since 2018 he co-runs SSHH, a mutant art space, classroom and store in the East Village of NYC.▷▷▷▷</p></a>
      </div>
    </div>
+   <div class="column">
+     <div class="content">
+       <a href="jason-html/index.html">
+       <img src="jason-motion.gif" style="width:100%">
+       <h3>Bootleg-玩转时尚艺术潮流! | Jason. S. Wright 「艺术访谈」</h3>
+       <p class="chinese">Jason. S. Wright<br>
+      Born 1987, US. Lives and works in Richmond, VA, US. Jason S. Wright’s work is an exploration of the parallels found within the creative practice and spiritual practice. A symbiotic bond that is constantly leading to new discoveries as he searches through media, material, and the psyche. Deeply rooted in the underground traditions of self-publishing and bootleg ideology where it is more fruitful to create your own world rather than assimilating to someone else’s, Wright mines his personal journey for ideas and narratives that become the building blocks for a path he takes one step at a time, one day at a time. ▷▷▷▷</p></a>
+     </div>
+   </div>
  </div>
 
 
