--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -110,6 +110,13 @@
 </div>
 </div>
 </div>
+<div class="row">
+<div class="column">
+<div class="content">
+<img class="titlelogo" src="jasonswflower.gif">
+</div>
+</div>
+</div>
 
 
      <br><br><br><br><br>
