yuye zhang updates

--- a/home.html
+++ b/home.html
@@ -185,8 +185,18 @@
      </div>
    </div>
  </div>
-
-
+</div>
+ <div class="row">
+ <div class="column">
+   <div class="content">
+     <a href="yuyezhang-html/index.html">
+     <img src="yuyezhang-cover.gif" style="width:100%">
+     <h3>人是万物的量尺-当代首饰 | 章雨叶 「艺术访谈」</h3>
+     <p class="chinese">Yuye Zhang 章雨叶<br>
+      Yuye Zhang is an international student from Suzhou, China. She is now in the 2nd year MFA program of Metal/ Jewelry/CAD-CAM  at Temple University Tyler School of Art & Architecture. Her contemporary jewelry work is frequently using 3D modeling and 3D printing technique. Her inspiration always come from her own life. Her current work explores different materials and elements and uncovers he relationships between body and spiritual world.▷▷▷▷</p></a>
+   </div>
+ </div>
+</div>
 
 
  </body>
