--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -116,6 +116,11 @@
 <img class="titlelogo" src="jasonswflower.gif">
 </div>
 </div>
+<div class="column">
+<div class="content">
+<img class="titlelogo" src="yuyezhang-flower.gif">
+</div>
+</div>
 </div>
 
 
