yuye zhang updates (2)

--- a/yuyezhang-html/index.html
+++ b/yuyezhang-html/index.html
@@ -126,8 +126,9 @@ gtag('config', 'G-P2726CSWT4');
     <br><br>
     <img class="titlelogo" src="yuyezhang-flower.gif">
     <br><br>
-    <p class="english"><a class="big">✯ Which inspire 章雨叶 Yuye Zhang most ✯ </a></p>
-    <p class="chinese">“人是万物的尺度” / "Man Is the Measure of All Things."</p>
+    <p class="english"><a class="big">✯ Which inspire Yuye Zhang most ✯ </a></p>
+    <p class="chinese">“人是万物的尺度” </p>
+    <p class="english">"Man Is the Measure of All Things."</p>
     <br><br><br><br><br><br>
     <div class="information">
     <p class="chinese"><a class="big">章雨叶 (Yuye Zhang)联系方式</a></p>
