--- a/index.html
+++ b/index.html
@@ -25,17 +25,24 @@
    </div>
    <br>
    <br><br><br>
-
+   <div class="text"><a href="opencall-html/index.html">
+   <img src="open call.jpg" style="width:100%"></a>
+  </div>
+  <br><br>
+  <p class="chinese"><a href="opencall-html/index.html">MUYA OPEN CALL - 幻化纬度 (Transform & Unique & Latitude) is the topic for the next season, we are looking forward to your submission!! Click for more information.</p></a>
+  <p class="chinese"><a href="opencall-html/index.html">///木牙MUYA - 幻化纬度 (Transform & Unique & Latitude) 下一季度新刊企划，期待您的投稿～点击查看更多相关信息吧～///</p><br></a>
+  <hr>
+<br><br><br><br>
    <div class="text">
    <img class="mySlides" src="slide01.jpg" style="width:100%">
    <img class="mySlides" src="slide02.jpg" style="width:100%">
    <img class="mySlides" src="slide03.jpg" style="width:100%">
    <img class="mySlides" src="slide04.jpg" style="width:100%">
 </div>
-   <br><br>
-   <p class="text">BE THE ONE</p>
-   <p class="text">没什么, 比年轻, 更为独特</p>
-   <p class="text">“Sensibility, Interview, Young, Unique & Original”</p>
+<br><br>
+<p class="text">BE THE ONE</p>
+<p class="text">没什么, 比年轻, 更为独特</p>
+<p class="text">“Sensibility, Interview, Young, Unique & Original”</p>
    <br><br><br><br>
    <hr>
    <p class="chinese">Here are a few quick links to our newest updated Artist and Designer interview article.</p>
