correct the words

--- a/opencall-html/index.html
+++ b/opencall-html/index.html
@@ -44,7 +44,7 @@ gtag('config', 'G-P2726CSWT4');
     费用：投递免费 （选中之后学生150人民币，其他200人民币）<br>
     -费用将用于公众号排版，网站编辑，ins等平台发布，私人订制问题，英文翻译和定制艺术家专属个性Logo制作其中包括GIF动态Logo。我们是非盈利组织，费用只用来维持平台基本运行。-</p>
     <p class="english">DEADLINE: 2021.01.13<br>
-    FEE: Free for submittion (After be selected, it will be paid for publication: Students 15$; Others 20$)<br>
+    FEE: Free for submission (After be selected, it will be paid for publication: Students 15$; Others 20$)<br>
     - The fee will contribute to publication edit, website publish, WeMedia art platform publish, art interview service for individual, English / Chinese translation, and design interview topic logo including promotion video and GIF logo. We are a nonprofit community. The fee will contribute to the general work and run for the whole MUYA art platform. -</p>
     <br><br>
     <p class="chinese"><a class="big">❊❊❊</a></p>
