--- a/home.html
+++ b/home.html
@@ -196,6 +196,15 @@
       Yuye Zhang is an international student from Suzhou, China. She is now in the 2nd year MFA program of Metal/ Jewelry/CAD-CAM  at Temple University Tyler School of Art & Architecture. Her contemporary jewelry work is frequently using 3D modeling and 3D printing technique. Her inspiration always come from her own life. Her current work explores different materials and elements and uncovers he relationships between body and spiritual world.▷▷▷▷</p></a>
    </div>
  </div>
+ <div class="column">
+   <div class="content">
+     <a href="pixy-html/index.html">
+     <img src="pixyliao.gif" style="width:100%">
+     <h3>什么？神仙爱情？| Pixy Liao 「艺术访谈」</h3>
+     <p class="chinese">Pixy Liao 廖逸君<br>
+      Pixy Liao. Born and raised in Shanghai, China, Pixy Liao is an artist currently resides in Brooklyn, NY. Her long-term photographic project, “Experimental Relationships”, challenges traditional notions of gender. Femininity is also the subject of her other photographs and sculptures. Liao has participated in exhibitions and performances internationally, including the Rencontres d’Arles in Arles (France); Asia Society (Houston); National Gallery of Australia (Sydney); the Museum of Sex (New York); UCCA Center for Contemporary Art (Beijing), etc.▷▷▷▷</p></a>
+   </div>
+ </div>
 </div>
 
 
