--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -121,6 +121,11 @@
 <img class="titlelogo" src="yuyezhang-flower.gif">
 </div>
 </div>
+<div class="column">
+<div class="content">
+<img class="titlelogo" src="pixyliao-flower.gif">
+</div>
+</div>
 </div>
 
 
