--- a/index.html
+++ b/index.html
@@ -25,18 +25,17 @@
    </div>
    <br>
    <br><br><br>
-   <div class="text"><a href="opencall-html/index.html">
-   <img src="open call.jpg" style="width:100%"></a>
+   <img src="opencalltrailer-01.jpg" style="width:100%"></a>
   </div>
   <br><br>
-  <p class="chinese"><a href="opencall-html/index.html">MUYA OPEN CALL - 幻化纬度 (Transform & Unique & Latitude) is the topic for the next season, we are looking forward to your submission!! Click for more information.</p></a>
-  <p class="chinese"><a href="opencall-html/index.html">///木牙MUYA - 幻化纬度 (Transform & Unique & Latitude) 下一季度新刊企划，期待您的投稿～点击查看更多相关信息吧～///</p><br></a>
+  <p class="chinese"><a href="opencall-html/index.html">木牙MUYA - 幻化纬度 (Transform & Unique & Latitude) newest season is updating!! Follow us and looking farward our artist & designer interview article.</p></a>
+  <p class="chinese"><a href="opencall-html/index.html">///木牙MUYA - 幻化纬度 (Transform & Unique & Latitude) 季度期刊正在更新中，跟我们一起期待我们艺术家和设计师的采访文章吧！///</p><br></a>
   <hr>
 <br><br><br><br>
    <div class="text">
+   <img class="mySlides" src="pixyliao-05.jpg" style="width:100%">
    <img class="mySlides" src="slide01.jpg" style="width:100%">
    <img class="mySlides" src="slide02.jpg" style="width:100%">
-   <img class="mySlides" src="slide03.jpg" style="width:100%">
    <img class="mySlides" src="slide04.jpg" style="width:100%">
 </div>
 <br><br>
@@ -47,9 +46,9 @@
    <hr>
    <p class="chinese">Here are a few quick links to our newest updated Artist and Designer interview article.</p>
    <p class="chinese">///快来看看我们最近更新的采访文章吧～///</p><br>
+   <p class="chinese"><a href="pixy-html/index.html">➥ 什么？神仙爱情？| Pixy Liao 「艺术访谈」--- 2021.02.14</p></a>
    <p class="chinese"><a href="braulio-html/index.html">➥ 现实与虚拟的视觉转化 | Braulio Amado 「艺术访谈」--- 2020.10.27</p></a>
    <p class="chinese"><a href="splopdesign-html/index.html">➥ 线上珠宝展竟是盲盒❗️❓| Splop Design 「艺术访谈」--- 2020.10.19</p></a>
-   <p class="chinese"><a href="avaroth-html/index.html">➥ 跨界媒介的碰撞：蜂巢+刺绣 | Ava Roth 「艺术访谈」--- 2020.10.06</p></a>
    <p class="chinese"><a href="synopticoffice-html/index.html">➥ 跨文化下的字体设计 | Synoptic Office 「艺术访谈」--- 2020.09.29</p></a>
 
 
