wenjing update + home page title pic update

--- a/about.html
+++ b/about.html
@@ -47,8 +47,8 @@
     partners, creators, film and television, writing, music, and other outstanding new stars and predecessors to do creative dialogues.</p>
      <br><br>
      <p class="big">✤ 关于我们 | About us ✤</p>
-     <p class="chinese">木牙MUYA成立于2020年，致力于探索感性文化的各个方面。包括当代艺术，设计，插画，工艺，街头艺术，动画，新材料，媒体等。木牙诚邀来自世界各地的艺术从业者，策展人，工作室合伙人和创作家进行对话。以解决问题，可发展方向，强调新颖，非常规的创造力为主要思想。</p>
-     <p class="english">MUYA was founded in 2020 and is committed to exploring all aspects of perceptual culture. Includes contemporary art, design, illustration, craft, street art, animation, new materials, media and more. MUYA invites artists, curators, studio partners and creators from around the world to engage in a dialogue. To solve the problem, development direction, emphasis on new, unconventional creativity as the main ideas.</p>
+     <p class="chinese">木牙MUYA是一个以中英文艺术访谈与交流的媒体平台，饱含着对艺术的热爱，我们期待倾听更多充满独特的多元化艺术思想，拥有着囊括海内外读者的独特期刊属性，为你打造一个专属于你自己的展示平台，我们怀着对每一个独特艺术概念的敬意，为你量身打造艺术专访的空间。</p>
+     <p class="english">MUYA is an artist and designer independent subscription and WeMedia art platform based in English and Chinese languages. We are holding the respect and love for the art and looking forward to hearing from more and more diversity and unique artistic thoughts. We are aiming to build art interview space and a platform for individual. </p>
 
      <br><br>
      <p class="big">✤ 定位和宗旨 ✤</p>
@@ -66,8 +66,8 @@
     More recently, she has focused on specifically interpreting the language of ubiquitous clothing labels. By extracting their contents, she creates new labels to express personal reflections on everyday routines and rituals. As jewelry, the tags’ inner language is exposed, inviting the wearer to consider their own contents, habits, and needs. Her works are selected in exhibition at Beijing International Design Week, New York Jewelry Week, Madrid Art Jewelry Week in Spain, Munich Jewelry Week in France, French Jewelry Week, Athens Jewelry Week, German Jewelry Week, Anderson Gallery, Philadelphia National Liberty  Museum, etc.
     Beiya Yang is currently completing her graduate degree in metal.</p>
     <p class="chinese"><a class="link" href="http://machine-art-girl.net/" target="_blank">刘禹桐 Yutong Liu</a><br><br>
-    刘禹桐，来自中国的独立平面与视觉设计师，她目前是美国VCUarts平面设计系的半职教职任教讲师。她在美国弗吉尼亚联邦大学艺术学院设计与视觉传达专业拿到硕士研究生学位（2018-2020）。并在中国鲁迅美术学院视觉传达设计专业拿到本科学位（2013-2017)。她的作品相关于机械情感共鸣和赛博人文，赛博女权主义，材料性与非材料性的研究，视觉语言的应用，印刷和数字出版物的探索。她的作品被AIGA(美国专业设计协会)，The One Show ADC，Number：Inc.和A' Design and Competition中提名，展示和获奖。</p>
-    <p class="english">Yutong Liu is an independent graphic and visual designer from China. She is currently teaching as an Ajunct Faculty of graphic design department at VCUarts in USA. She got MFA Design - Visual Communication at Virginia Commonwealth University School of Fine Arts in USA (2018-2020)🇺🇸and BFA Visual Communication Design at Luxun Academy School of Fine Arts in China (2013-2017)🇨🇳.Her work based on machine sympathy and cyber humnanities, research on cyber feminist, material and immaterial, visual languages using, exploration on printed and digital publication.Her works are selected or awarded by AIGA(American Institute of Graphic Arts), The One Show ADC, Number:Inc.,and A' Design and Competition, etc.</p>
+    平面设计师, 艺术创作者, 木牙MUYA艺术艺术自媒体平台合作创始人, 美国弗吉尼亚联邦大学艺术学院兼职教师, 鲁迅美术学院艺术学士, 美国弗吉尼亚联邦大学艺术硕士。研究相关于机械情感共鸣和赛博人文, 材料性与非材料性, 印刷与数字出版物的视觉语言探索。作品曾在上海, 大连, 纽约, 巴塞罗那, 弗吉尼亚洲里士满等多地展出，并在ADC (The One Show), IDA (International Design Awards), A’Design, 时报金犊奖，和 Graphis Inc 等中获奖。</p>
+    <p class="english">Graphic designer, art creator, co-founder of Muya Art and WeMedia Platform, Adjunct faculty of School of Art in Virginia Commonwealth University, Bachelor of Fine Arts, Lu Xun Academy of Fine Arts, Master of Fine Arts, Virginia Commonwealth University. The research is related to mechanical emotional resonance and cyber humanities, material and non-material, print and digital publications visual language exploration. Her works have been exhibited in Shanghai, Dalian, New York, Italy, Barcelona, Richmond, Virginia, and awarded by ADC (The One Show), IDA (International Design Awards), A 'Design, The Times Young creative Awards, and Graphis Inc.</p>
     <br><br><br><br>
 
     <p class="big">✤ CONTACT US✤</p>
