--- a/home.html
+++ b/home.html
@@ -32,23 +32,24 @@
   <div class="column">
     <div class="content">
       <a href="ChinoAmobi-html/index.html">
-      <img src="chino-motion.gif" style="width:100%">
+      <img src="chino-title.jpg" style="width:100%">
       <h3>友情 EROICA | CHINO AMOBI 「艺术访谈」</h3>
-      <p class="chinese">Chino Amobi Is a multimedia artists who combines art, painting, design, music, writing, and film with a rich assemblage of styles and voices.Amobi is a co-founder of the independent record label NON Worldwide and creative director of EROICA. In 2016 he released the EP Airport Music For Black Folk and in 2017 released his debut album Paradiso to critical acclaim. He received his MFA in Visual Communication at VCU.Amobi also earned a BFA in Painting and Printmaking from VCU. Chino has performed internationally including the New Museum New York, MOCA Los Angeles, South Korea, Russia, France, and Brazil. ▷▷▷▷</p></a>
+      <p class="chinese">Chino Amobi Is a multimedia artists who combines art, painting, design, music, writing, and film with a rich assemblage of styles and voices.Amobi is a co-founder of the independent record label NON Worldwide and creative director of EROICA...▷▷▷▷</p></a>
     </div>
   </div>
   <div class="column">
     <div class="content">
     <a href="SorinStudio-html/index.html">
-    <img src="sorin-motion.gif" style="width:100%">
+    <img src="sorin-title.jpg" style="width:100%">
       <h3>雅痞艺术+SOARIN STUDIO | 关于西装，也许你一无所知 「艺术访谈」</h3>
       <p class="chinese">"Retro is a kind of mark, constantly reappearing, but forgets the essence of retro: discontent with reality.The future recast from the past and the present. Restoring ancient ways, remolding from the old times and the new century.Break the old ways with the old ways.To discover, to deny, to reconstruct.The accumulation of history is profound in restoring ancient ways, and the creation of the future is bursting out in restoring ancient ways.So that's SOARIN."▷▷▷▷</p></a>
     </div>
   </div>
+  <div class="row">
   <div class="column">
     <div class="content">
       <a href="xuewu-html/index.html">
-    <img src="xuewu-motion.gif" style="width:100%">
+    <img src="xuewu-title.jpg" style="width:100%">
       <h3>对话禅修艺术 | 郑学武 ZHENG XUEWU 「艺术访谈」</h3>
       <p class="chinese">Artist/International art curator.
       Born in HeiLongJiang（黑龙江） Agricultural Reclamation Construction Corps. He studied in the Department of Fine Arts at Harbin Normal University and the Department of Printmaking at the State University of New York, School of Fine Arts. Zheng Xuewu also is a visiting professor at Appalachian State University and the University of North Carolina, USA; visiting scholar at Columbia University, Parsons, Vassar College, and Cork University in Ireland...▷▷▷▷
@@ -58,10 +59,10 @@
   <div class="column">
     <div class="content">
     <a href="eric-html/index.html">
-    <img src="Eric-motion.gif" style="width:100%">
+    <img src="eric-title.jpg" style="width:100%">
       <h3>出生在内心的怪兽 | ERIC MILLIKIN 「艺术访谈」</h3>
       <p class="chinese"> Conceptual activist new media artist based in Detroit, Michigan, and Richmond, Virginia. Millikin comes from a working-class family, growing up in a mobile home in rural Michigan, the son of a laid-off auto worker and a Denny’s waitress.
-      The activist themes of his work often seek to change the types of prejudice, fear, and exploitation he has seen in the industrial Midwest and the former capital of the Confederacy. Millikin is a first-generation college student who attended Michigan State University with multiple academic scholarships, including a National Merit Scholarship, and he is currently an MFA candidate at Virginia Commonwealth University's renowned Kinetic Imaging program.Coming out of an isolated rural area, Millikin's strategy is now to reach as wide an audience as possible in order to affect maximum social change. He has recently exhibited in 20 venues within a year’s time, and his work has been exhibited in museums and galleries from Detroit, Denver, and Dubai to San Francisco, Scotland, and South Korea... ▷▷▷▷</p></a>
+      The activist themes of his work often seek to change the types of prejudice, fear, and exploitation he has seen in the industrial Midwest and the former capital of the Confederacy... ▷▷▷▷</p></a>
     </div>
     </div>
    </div>
@@ -69,7 +70,7 @@
      <div class="column">
        <div class="content">
          <a href="shiyouzhong-html/index.html">
-         <img src="shiyouzhong-cover.gif" style="width:100%">
+         <img src="youzhong-title.jpg" style="width:100%">
          <h3>明暗之间看见色彩 | 施又中 SHI YOUZHONG 「艺术访谈」</h3>
          <p class="chinese">She was born in Taiwan in 1972 and graduated from the Drama Department of Chinese Culture University. She is a professional artist with over 10 years' painting experience. She is mainly engaged in acrylic and watercolor painting. ▷▷▷▷</p></a>
        </div>
@@ -77,7 +78,7 @@
      <div class="column">
        <div class="content">
          <a href="zhengluoyu-html/index.html">
-         <img src="zhengluoyu-cover.gif" style="width:100%">
+         <img src="luoyu-title.jpg" style="width:100%">
          <h3>❀ 八月特刊 / Special Topic ❀<br>
            八月夏天，治愈音符 | 郑洛宇 Zheng Luoyu</h3>
          <p class="chinese"> Hello, everyone. My name is Zheng Luoyu
@@ -90,7 +91,7 @@
      <div class="column">
        <div class="content">
          <a href="liulight-html/index.html">
-         <img src="liulight-motion.gif" style="width:70%">
+         <img src="liulight-title.jpg" style="width:100%">
          <h3>与其拥抱浪漫的理想，你必须面对每一段破碎爱情的意义 | Liu Light 「艺术访谈」</h3>
          <p class="chinese">Liu Light 刘亮 is an artist, writer, and musician based in New York. They create a wide variety of interrelated work, including motion paintings, illustrations, poetry, art books, songs, and performance. Light is interested in creating a language / reality / world that they can exist in, exploring and reshaping the boundaries and grey areas between lived experience, dream, romance, body, self, and fantasy. ▷▷▷▷</p></a>
        </div>
@@ -98,7 +99,7 @@
      <div class="column">
        <div class="content">
          <a href="cyriakharris-html/index.html">
-         <img src="cyriak06.gif" style="width:100%">
+         <img src="cyriak-title.jpg" style="width:100%">
          <h3>动物世界怪诞频道 | Cyriak Harris 「艺术访谈」
          </h3>
          <p class="chinese">Cyriak Harris is a British artist best known for his surreal animations using photo and video montage, which he began spreading on the internet in 2004. He has since built a career as a freelance animator, working on commercials, TV shows, and music videos, and has a YouTube following of over a million subscribers. He currently lives in Lincolnshire for no apparent reason. ▷▷▷▷</p></a>
@@ -109,15 +110,15 @@
      <div class="column">
        <div class="content">
          <a href="digbi-html/index.html">
-         <img src="digbi-cover.gif" style="width:100%">
+         <img src="dig-title.jpg" style="width:100%">
          <h3>脑袋开了花，城市发了芽 | Digbijayee Khatua 「艺术访谈」</h3>
-         <p class="chinese">Digbijayee Khatua received a Master’s degree in Fine Arts in 2015 from the College of Art, Delhi University, New Delhi, and a Bachelor’s degree in Visual Arts in 2012 from B. K. College of Art and Crafts, Bhubaneshwar, Odisha and. Most recently, He has received some Scholarships, awards, and group exhibitions in India and abroad. Research Grant Scholarship Lalit Kala Academy, Garhi Studio, New Delhi, 2015-2016. and currently based in New Delhi.▷▷▷▷</p></a>
+         <p class="chinese">Digbijayee Khatua received a Master’s degree in Fine Arts in 2015 from the College of Art, Delhi University, New Delhi, and a Bachelor’s degree in Visual Arts in 2012 from B. K. College of Art and Crafts, Bhubaneshwar, Odisha and...▷▷▷▷</p></a>
        </div>
      </div>
      <div class="column">
        <div class="content">
          <a href="huayiwenxin-html/index.html">
-         <img src="huayiwenxin-motion.gif" style="width:100%">
+         <img src="huayiwenxin-title.jpg" style="width:100%">
          <h3>尚未踏入过的世界 | 画意文心-返景 「展览&访谈」</h3>
          <p class="chinese">Painting group exhibition in Beijing in China. The show name is "Nature-hearted in painting - Retruning nature". The painters and artists: Zhengxin Liu, Chen Ma, Shilong Wei, Chongwen Yu. ▷▷▷▷</p></a>
        </div>
@@ -127,19 +128,17 @@
      <div class="column">
        <div class="content">
          <a href="huangwei-html/index.html">
-         <img src="huangwei10.jpg" style="width:100%">
+         <img src="huangwei-title.jpg" style="width:100%">
          <h3>在水墨渲染中寻找内心的平静 | 黄威 「艺术访谈」</h3>
          <p class="chinese">Huang Wei<br>
          1985, Born in Baotou, Inner Mongolia
-         2011, Graduated from The Department of Chinese Painting of Tianjin Academy of Fine Arts with a bachelor's degree
-         2014, I graduated from Art College of Xizang University with a master's degree
-         Now he lives and works in Beijing T3 International Art District.▷▷▷▷</p></a>
+         2011, Graduated from The Department of Chinese Painting of Tianjin Academy of Fine Arts with a bachelor's degree...▷▷▷▷</p></a>
        </div>
      </div>
      <div class="column">
        <div class="content">
          <a href="synopticoffice-html/index.html">
-         <img src="synopticoffice-cover.gif" style="width:100%">
+         <img src="slide04.jpg" style="width:100%">
          <h3>跨文化下的字体设计 | Synoptic Office 「艺术访谈」</h3>
          <p class="chinese">Caspar Lam & YuJune Park<br>
            Synoptic Office is a multidisciplinary design studio operating in the space between design, technology, and education. The studio’s work has been exhibited internationally and recognized by Fast Company  Design, AIGA Eye on Design, iDn, Neshan, Etapes, and It’s Nice That. ▷▷▷▷</p></a>
@@ -148,16 +147,16 @@
      <div class="column">
        <div class="content">
          <a href="avaroth-html/index.html">
-         <img src="avaroth-cover.jpg" style="width:100%">
+         <img src="slide03.jpg" style="width:100%">
          <h3>跨界媒介的碰撞：蜂巢+刺绣 | Ava Roth 「艺术访谈」</h3>
          <p class="chinese">Ava Roth<br>
-           Ava Roth is a Toronto-based encaustic painter, embroiderer and mixed-media artist. Roth’s current work brings together  techniques from the discrete worlds of fine art and crafts. Her series of sewn encaustic paintings, her collection of encaustic embroideries and her work with live bee hives all push the boundaries of what we imagine possible in each individual practice. ▷▷▷▷</p></a>
+           Ava Roth is a Toronto-based encaustic painter, embroiderer and mixed-media artist. Roth’s current work brings together techniques from the discrete worlds of fine art and crafts...▷▷▷▷</p></a>
        </div>
      </div>
      <div class="column">
        <div class="content">
          <a href="splopdesign-html/index.html">
-         <img src="splopdesign-cover.gif" style="width:100%">
+         <img src="slide02.jpg" style="width:100%">
          <h3>线上珠宝展竟是盲盒❗️❓| Splop Design 「艺术访谈」</h3>
          <p class="chinese">Yingqi Puffy Zhao, Kerry Yichen Guan, Junghoon Han<br>
            Splop Design features and sells handcrafted wearable art and jewelry created by upcoming emerging artists of today.▷▷▷▷</p></a>
@@ -169,7 +168,7 @@
    <div class="column">
      <div class="content">
        <a href="braulio-html/index.html">
-       <img src="braulio-cover.gif" style="width:100%">
+       <img src="slide01.jpg" style="width:100%">
        <h3>现实与虚拟的视觉转化 | Braulio Amado 「艺术访谈」</h3>
        <p class="chinese">Bráulio Amado<br>
         Bráulio Amado is a Graphic Designer and Illustrator from Portugal, currently living in New York City. He worked as a Designer at Pentagram NYC. Then joined Bloomberg Businessweek as an Art Director. Moved to Wieden+Kennedy. Then started his own studio in 2017. Since 2018 he co-runs SSHH, a mutant art space, classroom and store in the East Village of NYC.▷▷▷▷</p></a>
@@ -178,10 +177,10 @@
    <div class="column">
      <div class="content">
        <a href="jason-html/index.html">
-       <img src="jason-motion.gif" style="width:100%">
+       <img src="jason-title.jpg" style="width:100%">
        <h3>Bootleg-玩转时尚艺术潮流! | Jason. S. Wright 「艺术访谈」</h3>
        <p class="chinese">Jason. S. Wright<br>
-      Born 1987, US. Lives and works in Richmond, VA, US. Jason S. Wright’s work is an exploration of the parallels found within the creative practice and spiritual practice. A symbiotic bond that is constantly leading to new discoveries as he searches through media, material, and the psyche. Deeply rooted in the underground traditions of self-publishing and bootleg ideology where it is more fruitful to create your own world rather than assimilating to someone else’s, Wright mines his personal journey for ideas and narratives that become the building blocks for a path he takes one step at a time, one day at a time. ▷▷▷▷</p></a>
+      Born 1987, US. Lives and works in Richmond, VA, US. Jason S. Wright’s work is an exploration of the parallels found within the creative practice and spiritual practice. A symbiotic bond that is constantly leading to new discoveries as he searches through media, material, and the psyche... ▷▷▷▷</p></a>
      </div>
    </div>
  </div>
@@ -190,19 +189,28 @@
  <div class="column">
    <div class="content">
      <a href="yuyezhang-html/index.html">
-     <img src="yuyezhang-cover.gif" style="width:100%">
+     <img src="yuyezhang-title.jpg" style="width:100%">
      <h3>人是万物的量尺-当代首饰 | 章雨叶 「艺术访谈」</h3>
      <p class="chinese">Yuye Zhang 章雨叶<br>
-      Yuye Zhang is an international student from Suzhou, China. She is now in the 2nd year MFA program of Metal/ Jewelry/CAD-CAM  at Temple University Tyler School of Art & Architecture. Her contemporary jewelry work is frequently using 3D modeling and 3D printing technique. Her inspiration always come from her own life. Her current work explores different materials and elements and uncovers he relationships between body and spiritual world.▷▷▷▷</p></a>
+      Yuye Zhang is an international student from Suzhou, China. She is now in the 2nd year MFA program of Metal/Jewelry/CAD-CAM at Temple University Tyler School of Art & Architecture. Her contemporary jewelry work is frequently using 3D modeling and 3D printing technique...▷▷▷▷</p></a>
    </div>
  </div>
  <div class="column">
    <div class="content">
      <a href="pixy-html/index.html">
-     <img src="pixyliao.gif" style="width:100%">
+     <img src="pixyliao-05.jpg" style="width:100%">
      <h3>什么？神仙爱情？| Pixy Liao 「艺术访谈」</h3>
      <p class="chinese">Pixy Liao 廖逸君<br>
-      Pixy Liao. Born and raised in Shanghai, China, Pixy Liao is an artist currently resides in Brooklyn, NY. Her long-term photographic project, “Experimental Relationships”, challenges traditional notions of gender. Femininity is also the subject of her other photographs and sculptures. Liao has participated in exhibitions and performances internationally, including the Rencontres d’Arles in Arles (France); Asia Society (Houston); National Gallery of Australia (Sydney); the Museum of Sex (New York); UCCA Center for Contemporary Art (Beijing), etc.▷▷▷▷</p></a>
+      Pixy Liao. Born and raised in Shanghai, China, Pixy Liao is an artist currently resides in Brooklyn, NY. Her long-term photographic project, “Experimental Relationships”, challenges traditional notions of gender. Femininity is also the subject of her other photographs and sculptures...▷▷▷▷</p></a>
+   </div>
+ </div>
+ <div class="column">
+   <div class="content">
+     <a href="wenjing-html/index.html">
+     <img src="slide05.jpg" style="width:100%">
+     <h3>聊聊艺术的“那几个点” | 周雯静 「艺术访谈」</h3>
+     <p class="chinese">Wenjing 周雯静<br>
+      Wenjing Zhou, born in HuNan, graduated from School Fine Arts De Nantes Saint-Nazaire. She worked and lived in Paris and Beijing. Her works exhibited at Gallery Ovision at Paris in France, Heduoling art gallery in Chengdu, Today art museum in Beijing, PyeongChang Olympic Media Art project in Korea, Asia Scene Art Space in Beijing. ▷▷▷▷</p></a>
    </div>
  </div>
 </div>
