--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -126,6 +126,11 @@
 <img class="titlelogo" src="pixyliao-flower.gif">
 </div>
 </div>
+<div class="column">
+<div class="content">
+<img class="titlelogo" src="wenjing-flower.gif">
+</div>
+</div>
 </div>
 
 
