--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
   <hr>
 <br><br><br><br>
    <div class="text">
+   <img class="mySlides" src="slide05.jpg" style="width:100%">
    <img class="mySlides" src="pixyliao-05.jpg" style="width:100%">
    <img class="mySlides" src="slide01.jpg" style="width:100%">
-   <img class="mySlides" src="slide02.jpg" style="width:100%">
    <img class="mySlides" src="slide04.jpg" style="width:100%">
 </div>
 <br><br>
@@ -46,6 +46,7 @@
    <hr>
    <p class="chinese">Here are a few quick links to our newest updated Artist and Designer interview article.</p>
    <p class="chinese">///快来看看我们最近更新的采访文章吧～///</p><br>
+   <p class="chinese"><a href="wenjing-html/index.html">➥ 聊聊艺术的“那几个点” | 周雯静 「艺术访谈」--- 2021.02.27</p></a>
    <p class="chinese"><a href="pixy-html/index.html">➥ 什么？神仙爱情？| Pixy Liao 「艺术访谈」--- 2021.02.14</p></a>
    <p class="chinese"><a href="braulio-html/index.html">➥ 现实与虚拟的视觉转化 | Braulio Amado 「艺术访谈」--- 2020.10.27</p></a>
    <p class="chinese"><a href="splopdesign-html/index.html">➥ 线上珠宝展竟是盲盒❗️❓| Splop Design 「艺术访谈」--- 2020.10.19</p></a>
