--- a/home.html
+++ b/home.html
@@ -213,6 +213,15 @@
       Wenjing Zhou, born in HuNan, graduated from School Fine Arts De Nantes Saint-Nazaire. She worked and lived in Paris and Beijing. Her works exhibited at Gallery Ovision at Paris in France, Heduoling art gallery in Chengdu, Today art museum in Beijing, PyeongChang Olympic Media Art project in Korea, Asia Scene Art Space in Beijing. ▷▷▷▷</p></a>
    </div>
  </div>
+ <div class="column">
+   <div class="content">
+     <a href="deniz-html/index.html">
+     <img src="deniz-title.jpg" style="width:100%">
+     <h3>重叠交错的平面与潜意识 | Deniz Kazma 「艺术访谈」</h3>
+     <p class="chinese">Deniz Kazma<br>
+      Deniz Kazma is a Turkish, Belgian artist based in Brussels. She received her MFA in graphic design in Istanbul, this training and being able to work as a design professional for many years helped her use her intuitions and develop her skills as a self-taught artist.▷▷▷▷</p></a>
+   </div>
+ </div>
 </div>
 
 
