--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -131,6 +131,11 @@
 <img class="titlelogo" src="wenjing-flower.gif">
 </div>
 </div>
+<div class="column">
+<div class="content">
+<img class="titlelogo" src="deniz-flower.gif">
+</div>
+</div>
 </div>
 
 
