--- a/home.html
+++ b/home.html
@@ -223,7 +223,17 @@
    </div>
  </div>
 </div>
-
+<div class="row">
+<div class="column">
+  <div class="content">
+    <a href="lois-html/index.html">
+    <img src="lois-title.jpg" style="width:100%">
+    <h3>信息拼贴带来的真实与虚幻 | Lois Notebaart 「艺术访谈」</h3>
+    <p class="chinese">Lois Notebaart<br>
+    My name is Lois (1995) I am born in The Netherlands but I have lived in the United States (Arizona and Montana) and France (Paris) while growing up. Currently based in Amsterdam, The Netherlands. I have attended the Academy of Photography in Amsterdam and completed my bachelor of arts there...▷▷▷▷</p></a>
+  </div>
+</div>
+</div>
 
  </body>
 
