--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -136,6 +136,12 @@
 <img class="titlelogo" src="deniz-flower.gif">
 </div>
 </div>
+<div class="column">
+<div class="content">
+<img class="titlelogo" src="lois-flower.gif">
+</div>
+</div>
+
 </div>
 
 
