--- a/lois-html/index.html
+++ b/lois-html/index.html
@@ -27,7 +27,7 @@ gtag('config', 'G-P2726CSWT4');
   <div class="container">
     <br>
     <p class="title_big">信息拼贴带来的真实与虚幻 | Lois Notebaart 「艺术访谈」</p>
-    <img class="titlepic" src="Lois.jpg">
+    <img class="titlepic" src="lois.jpg">
     <br><br>
     <p class="text">欢迎来到木牙Make Unique Young Arts，让我们来粘粘贴贴，裁裁剪剪，拼拼凑凑～</p>
     <br><br>
