Merani page update

--- a/home.html
+++ b/home.html
@@ -233,6 +233,15 @@
     My name is Lois (1995) I am born in The Netherlands but I have lived in the United States (Arizona and Montana) and France (Paris) while growing up. Currently based in Amsterdam, The Netherlands. I have attended the Academy of Photography in Amsterdam and completed my bachelor of arts there...▷▷▷▷</p></a>
   </div>
 </div>
+<div class="column">
+  <div class="content">
+    <a href="merani-html/index.html">
+    <img src="merani-title.jpg" style="width:100%">
+    <h3>平衡与失衡的艺术 | Merani Schilcher 「艺术访谈」</h3>
+    <p class="chinese">Merani Schilcher<br>
+    Merani Schilcher is a media artist and designer with a passion for the internet, machines and experiments from Berlin. Human characteristics in technology and how we as humans are currently using and connecting with is a large focus of hers...▷▷▷▷</p></a>
+  </div>
+</div>
 </div>
 
  </body>
