--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -141,6 +141,11 @@
 <img class="titlelogo" src="lois-flower.gif">
 </div>
 </div>
+<div class="column">
+<div class="content">
+<img class="titlelogo" src="merani-flower.gif">
+</div>
+</div>
 
 </div>
 
